# herdr-picker-plus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  herdr-plugin.toml
.agents/: product-marketing.md
.github/workflows/: release.yml
.pi/docs/: README.md  architecture.md  decisions.md  features.md
docs/: architecture.md
examples/: config.toml  default-config.toml
src/: app.rs  config.rs  keymap.rs  main.rs  model.rs  sources.rs  theme.rs  tui.rs
src/integrations/: command.rs  herdr_plus.rs  mod.rs  sessions.rs
