[package]
name = "herdr-picker-plus"
version = "0.1.0"
edition = "2021"
description = "Herdr-native overlay picker for workdirs, workspaces, zoxide, projects, and agents"
license = "MIT"
readme = "README.md"
keywords = ["herdr", "terminal", "tui", "workspace", "picker"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.29"
fuzzy-matcher = "0.3.7"
nucleo-matcher = "0.3.1"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
