[package]
name = "herdr-navigator"
version = "0.3.2"
edition = "2021"
description = "Jump to anything in Herdr from one fuzzy navigator"
license = "MIT"
readme = "README.md"
keywords = ["herdr", "terminal", "tui", "workspace", "picker"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.29"
fuzzy-matcher = "0.3.7"
nucleo-matcher = "0.3.1"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
